# 5-Multi-Agent-Coordination-Pattern-Examples

./: .env.example  LICENSE  README.md  pyproject.toml
Generator-Verifier/: README.md  generator_verifier.py
Orchestrator-Subagent/: model_setup.py  orchestrator_subagent.py
